Solved problem with encoding